<resources>
    <string name="app_name">financingApp</string>
    <string name="spentLabelTxt">You\'ve Spent: $</string>
    <string name="budgetLabelTxt">Your Budget: $</string>
    <string name="addExpenseButtonTxt">Add Expense</string>
    <string name="updateButtonTxt">Update</string>
    <string name="reportButtonTxt">Detailed Report</string>
    <string name="planBudgetButtonTxt">Plan Budget</string>
    <string name="Food">Food and Groceries</string>
    <string name="Transportation">Transportation</string>
    <string name="Utilities">Utilities</string>
    <string name="Entertainment">Entertainment</string>
    <string name="PersonalCare">Personal Care</string>
    <string name="HealthCare">Health Care</string>
    <string name="EmergencyFund">Emergency Fund</string>
    <string name="Savings">Savings</string>
    <string name="Other">Other</string>
    <string name="Debt">Debt</string>
    <string name="Submit">Submit</string>
    <string name="reportTitle">Detailed Report</string>
    <string name="reportFiller">Spent: 9999.00 Out of: 2000.00</string>
    <string name="Spent">Spent $</string>
    <string name="Budgeted">Budgeted $</string>
    <string name="budgetBar">Spent/Budget</string>
    <string name="detailed_report">Detailed Report</string>
    <string name="Rent">Rent</string>
    <string name="Exit">Exit</string>
    <string name="Close">Close</string>
    <string name="reportTxt">reportTxt</string>
    <string-array name="catagoryNameArray">
        <item>Rent</item>
        <item>Food and Groceries</item>
        <item>Transaction</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Emergency Fund</item>
        <item>Personal Care</item>
        <item>Health Care</item>
        <item>Saving</item>
        <item>Debt</item>
        <item>Other</item>
    </string-array>
</resources>
